# Content-Aggregator

./: LICENSE  README.md  __init__.py  config.py  databaseCursor.py  database_cursor.py  database_manager.py  exceptions.py  feed.py  requirements.txt  setup.cfg  user.py  webRequests.py
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
contentAggregator/: __init__.py  common.py  config.py  distributionsystem.py  exceptions.py  webRequests.py
contentAggregator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contentAggregator/feeds/: __init__.py  feed.py  rating.py
contentAggregator/sqlManagement/: __init__.py  databaseCursor.py  sqlQueries.py
contentAggregator/user/: __init__.py  newUserInterface.py  userInterface.py
contentaggregator/: __init__.py  __main__.py  config.py  distributionsystem.py  exceptions.py  messagesgeneration.py
contentaggregator/feeds/: __init__.py  feed.py  rating.py
contentaggregator/lib/: common.py  config.py  distributionsystem.py  exceptions.py  messagesgeneration.py  webrequests.py
contentaggregator/sqlmanagement/: __init__.py  databaseapi.py  (+1 more)
feeds/: feed.py  rating.py
front/: pcconfig.py
sqlManagement/: databaseCursor.py  sqlQueries.py
system_entrance/: credentials_authentication.py  entrance_controller.py  enttrance_controller.py  validators.py
user/: __init__.py  newUserInterface.py  userInterface.py
userAuthentications/: controller.py  pwdHandler.py  validators.py
userProperties/: password.py  time.py  username.py
user_properties/: address.py  time.py
(+47 files in other folders)
