[metadata]
name = contentAggregator
version = 0.0.1
author = Menachem Berkovich
author_email = p.Menachem.Berkovich@gmail.com
description = A package for aggregating content from different feeds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MenachemBerkovich/contentAggregator
license = MIT

[options]
packages = find: